<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fontcalculator.FontCalculatorFragment">

    <data>

        <variable
            name="viewModel"
            type="com.refrigerator2k.blueprinthelper.fontcalculator.FontCalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/font_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:suffixText="мм.">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/font_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <HorizontalScrollView
            android:id="@+id/chipHScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/font_text_layout">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </HorizontalScrollView>

        <com.refrigerator2k.blueprinthelper.parameter.TextParameter
            android:id="@+id/parameter1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipHScrollView"
            app:paramName="@string/uppercase_letter_height"
            app:paramValue="@{String.valueOf(viewModel.fontProperties.uppercaseHeight)}" />

        <com.refrigerator2k.blueprinthelper.parameter.TextParameter
            android:id="@+id/parameter2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parameter1"
            app:paramName="@string/lowercase_letter_height"
            app:paramValue="@{String.valueOf(viewModel.fontProperties.lowercaseHeight)}" />

        <com.refrigerator2k.blueprinthelper.parameter.TextParameter
            android:id="@+id/parameter3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parameter2"
            app:paramName="@string/letter_spacing"
            app:paramValue="@{String.valueOf(viewModel.fontProperties.letterSpacing)}" />

        <com.refrigerator2k.blueprinthelper.parameter.TextParameter
            android:id="@+id/parameter4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parameter3"
            app:paramName="@string/min_line_height"
            app:paramValue="@{String.valueOf(viewModel.fontProperties.minLineHeight)}"/>

        <com.refrigerator2k.blueprinthelper.parameter.TextParameter
            android:id="@+id/parameter5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parameter4"
            app:paramName="@string/min_word_spacing"
            app:paramValue="@{String.valueOf(viewModel.fontProperties.minWordSpacing)}" />

        <com.refrigerator2k.blueprinthelper.parameter.TextParameter
            android:id="@+id/parameter6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/parameter5"
            app:paramName="@string/font_line_weight"
            app:paramValue="@{String.valueOf(viewModel.fontProperties.fontWeight)}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>