<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/polygonTest">

    <fragment
        android:id="@+id/markupBuilderFragment"
        android:name="com.refrigerator2k.blueprinthelper.markupbuilder.MarkupBuilderFragment"
        android:label="@string/markup"
        tools:layout="@layout/fragment_markup_builder">
        <argument
            android:name="text"
            app:argType="string" />
        <action
            android:id="@+id/action_markupBuilderFragment_to_markupInfoFragment"
            app:destination="@id/markupInfoMenuItem"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="areaWidth"
            app:argType="float" />
    </fragment>
    <fragment
        android:id="@+id/markupInfoMenuItem"
        android:name="com.refrigerator2k.blueprinthelper.markupinfo.MarkupInfoFragment"
        android:label="@string/about_markup">
        <argument
            android:name="text"
            app:argType="string" />
        <argument
            android:name="areaWidth"
            app:argType="float" />
        <argument
            android:name="markupWidth"
            app:argType="float" />
    </fragment>
    <fragment
        android:id="@+id/mainFragment2"
        android:name="com.refrigerator2k.blueprinthelper.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment2_to_markupBuilderFragment"
            app:destination="@id/markupBuilderFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/polygonTest"
        android:name="com.refrigerator2k.blueprinthelper.PolygonTest"
        android:label="fragment_polygon_test"
        tools:layout="@layout/fragment_polygon_test" />
</navigation>